more css and layout fixes

--- a/app/assets/stylesheets/blog/posts.css.less
+++ b/app/assets/stylesheets/blog/posts.css.less
@@ -118,6 +118,10 @@
         color: #175057;
         font-weight: bold;
       }
+      &.wide {
+        width: 650px;
+        border:  none;
+      }
     }
 
     .title {
