--- a/app/views/admin/portadas/delete_post.js.erb
+++ b/app/views/admin/portadas/delete_post.js.erb
@@ -1,7 +1,7 @@
 <%- if @id %>
   console.log('done!')
   var div = $("[data-id=<%= @id %>]")
-  $('#portada_home_sections_attributes_'+div.data("section")+'_section_posts_attributes_'+div.data("position")+'_id').remove()
+  $("input[value^='<%= @section_id %>']").remove()
   div.html("<span>lugar disponible</span>").removeClass('ready').addClass('placeholder')
   $(input).remove
 
