--- a/app/views/crowdblog/posts/_twitter.html.slim
+++ b/app/views/crowdblog/posts/_twitter.html.slim
@@ -1,3 +1,4 @@
-a.twitter-share-button data-lang="es" data-via="angelguardian" href="https://twitter.com/share"
-javascript:
-  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+- unless @post.published_at.blank? && @post.id.nil?
+  a.twitter-share-button data-count="horizontal" data-counturl="#{main_app.post_url(*@post.url_params)}" data-lang="es" data-url="#{@post.short_url}" data-via="angelguadianmx" href="https://twitter.com/share"
+  javascript:
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
