change header and footer styles

--- a/app/assets/stylesheets/blog/footer.css.less
+++ b/app/assets/stylesheets/blog/footer.css.less
@@ -5,12 +5,12 @@ footer.main_footer {
   left: 0;
   right: 0;
   z-index: 10;
-  padding: 10px 5px;
-  background: @main-gray;
+  padding: 5px;
+  background: black;
 
   .footer-links {
     margin: 0;
-    text-align: center;
+    margin-top: 10px;
     li {
       display: inline;
       a {color: white;}
@@ -26,9 +26,10 @@ footer.main_footer {
 
   }
   .radio-levy {
-    width: 100px;
-    margin: 0 auto;
-    display: block;
-
   }
+}
+.pluginCountButton.pluginCountNum {
+  background: black;
+border: none;
+color: white;
 }
