--- a/app/assets/stylesheets/blog/header.css.less
+++ b/app/assets/stylesheets/blog/header.css.less
@@ -84,16 +84,16 @@ header {
     }
     &.inner-pages {
       text-align: left;
-      padding: 10px;
       h1 {
         float: left;
-        margin-top: 20px;
       }
       h3 {
         float: left;
-        margin-left: 110px;
-        font-size: 3em;
-        margin-top: 14px;
+        font-size: 2.1em;
+        text-align: center;
+        width: 404px;
+        line-height: 30px;
+
       }
       .search {
         float: right;
