--- a/app/views/admin/banners/index.html.haml
+++ b/app/views/admin/banners/index.html.haml
@@ -34,8 +34,12 @@
           - unless banner.url.blank?
             = link_to banner.url, banner.url, target: '_blank'
         %td= banner.space
-        %td= l banner.start_date.in_time_zone, format: :special
-        %td= l banner.end_date.in_time_zone, format: :special
+        %td
+          - if banner.start_date
+            = l banner.start_date.in_time_zone, format: :special
+        %td
+          - if banner.end_date
+            = l banner.end_date.in_time_zone, format: :special
         %td
           = link_to 'Borrar', "/admin/banners/#{banner.id}", method: 'delete', confirm: 'Estas seguro que quieres borrar este banner?'
 
