--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -2,10 +2,7 @@ footer.main_footer
   .wrapper
     .span7
       ul.footer-links
-        li
-          |
-          = link_to '#', class: 'radio-levy' do
-            = image_tag('/assets/radiolevy.jpg', width: '100', class: '')
+        li= image_tag('/assets/radiolevy.jpg', width: '100', class: '')
         li= link_to 'Quíenes somos','#'
         li= link_to 'Ventas','#'
     .span5
