add more space for jumbotron and remove banner placeholder

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -232,7 +232,7 @@
       background: none;
       li  {
         border: none;
-        background-image: url('/assets/related-bullet-white.gif'); 
+        background-image: url('/assets/related-bullet-white.gif');
       }
     }
   }
@@ -476,4 +476,7 @@ h2.titulo-tag {
     }
   }
 
+}
+.jumbotron {
+  margin: 20px 0;
 }
