add correct images

--- a/app/assets/stylesheets/blog/header.css.less
+++ b/app/assets/stylesheets/blog/header.css.less
@@ -27,7 +27,6 @@ header {
       font-weight: normal;
       display: inline-block;
       color: black;
-      line-height: 50px;
       padding: 0 8px;
       float: left;
       i {
@@ -77,7 +76,8 @@ header {
       }
       input {
         height: 10px;
-        width: 170px;
+        width: 145px;
+        padding-left: 25px;
         .border-radius(5px);
       }
       .today { display: none}
