--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -83,7 +83,7 @@
     .resumen {
       color: #A1A1A0;
       font-size: 13px;
-      background: url('/assets/resumen-more-icon.gif') no-repeat right bottom ;
+      background: url('/assets/resumen-more-icon.svg') no-repeat right bottom ;
       padding-bottom: 10px;
       &:hover {
         cursor: pointer;
@@ -177,7 +177,7 @@
     }
     .resumen {
       color: #1F1B1D;
-      background-image: url('/assets/resumen-more-icon-dark.gif');
+      background-image: url('/assets/resumen-more-icon.svg');
       a {
         color: #1F1B1D;
 
@@ -294,7 +294,7 @@
 .dato-del-dia {
   a {
     text-align: center;
-    background: url('/assets/resumen-more-icon.gif') no-repeat 750px center #eee;
+    background: url('/assets/resumen-more-icon.svg') no-repeat 750px center #eee;
     width: 770px;
     display: table-cell;
     height: 70px;
